configuration fixes